--- a/templates/cours.twig
+++ b/templates/cours.twig
@@ -6,17 +6,13 @@
 
 {% block container %}
 
+
     <div class="row">
-        {% for moncours in cours %}
-
-            <div class="card col-md-2" >
-                <div class="card-body">
-                    <h5 class="card-title">{{ moncours.nom }}</h5>
-                    <a href="infoscours.php?id={{ moncours.id }}" class="btn btn-primary">Plus d'infos</a>
-                </div>
-            </div>
-
-        {% endfor %}
+        <div class="list-group">
+            {% for moncours in cours %}
+                <a href="infoscours.php?id={{ moncours.id }}" class="list-group-item list-group-item-action">{{ moncours.nom }}</a>
+            {% endfor %}
+        </div>
     </div>
 
 
