--- a/templates/infoscours.twig
+++ b/templates/infoscours.twig
@@ -1,80 +1,67 @@
-{% extends "base.twig" %}
+{% extends "baseinfos.twig" %}
 
 {% block title %}
-    Informations Cours
+    Cours
 {% endblock %}
 
 
-{% block container %}
-    <script type="text/javascript">
-        //<!--
-        function change_onglet(name)
-        {
-            document.getElementById('onglet_'+anc_onglet).className = 'onglet_0 onglet';
-            document.getElementById('onglet_'+name).className = 'onglet_1 onglet';
-            document.getElementById('contenu_onglet_'+anc_onglet).style.display = 'none';
-            document.getElementById('contenu_onglet_'+name).style.display = 'block';
-            anc_onglet = name;
-        }
-        //-->
-    </script>
 
-    <h2> {{ moncours.nom }} </h2>
 
-    <div class="systeme_onglets">
-        <div class="onglets">
-            <span class="onglet_0 onglet" id="onglet_infos1" onclick="javascript:change_onglet('infos1');">Information General</span>
-            <span class="onglet_0 onglet" id="onglet_infos2" onclick="javascript:change_onglet('infos2');">Classe</span>
-            <span class="onglet_0 onglet" id="onglet_infos3" onclick="javascript:change_onglet('infos3');">Evaluation</span>
-        </div>
+  {% block nom %}
+      <h2> {{ moncours.nom }} </h2>
+  {% endblock %}
 
-        <div class="contenu_onglets">
+        {% block titreOnglet1 %}
+            Information General
+        {% endblock %}
 
-            <div class="contenu_onglet" id="contenu_onglet_infos1">
+            {% block dataOnglet1 %}
 
                 <p class="card-text">Matiere du cours : {{ matiere.nom }}</p>
                 <p class="card-text">Niveau du cours : {{ moncours.niveau }} eme</p>
 
-            </div>
+            {% endblock %}
 
-            <div class="contenu_onglet" id="contenu_onglet_infos2">
 
-            {% if profsClasses %}
 
-                {% for profclasse in profsClasses %}
-                    <p class="card-text">Professeur : {{ profclasse.0}} {{ profclasse.1}}</p>
-                    <p class="card-text">Classe : {{ profclasse.2}}</p>
-                {% endfor %}
 
-            {% else %}
-                <p>Aucune classe n'a suivi ce cours</p>
-            {% endif %}
+        {% block titreOnglet2 %}
+            Classe
+        {% endblock %}
 
-            </div>
+            {% block dataOnglet2 %}
 
-            <div class="contenu_onglet" id="contenu_onglet_infos3">
+                {% if profsClasses %}
+
+                    {% for profclasse in profsClasses %}
+                        <p class="card-text">Professeur : {{ profclasse.0}} {{ profclasse.1}}</p>
+                        <p class="card-text">Classe : {{ profclasse.2}}</p>
+                    {% endfor %}
+
+                {% else %}
+                    <p>Aucune classe n'a suivi ce cours</p>
+                {% endif %}
+
+            {% endblock %}
+
+
+
+
+        {% block titreOnglet3 %}
+            Evaluation
+        {% endblock %}
+
+            {% block dataOnglet3 %}
 
                 {% if evaluations %}
-                        <ul>
-                    {% for evaluation in evaluations %}
-                        <li>{{ evaluation }}</li>
-                    {% endfor %}
+                    <ul>
+                        {% for evaluation in evaluations %}
+                            <li>{{ evaluation }}</li>
+                        {% endfor %}
                     </ul>
                 {% else %}
                     <p>Aucune evaluation pour ce cours</p>
                 {% endif %}
 
-            </div>
+            {% endblock %}
 
-        </div>
-    </div>
-    <script type="text/javascript">
-        //<!--
-        var anc_onglet = 'infos1';
-        change_onglet(anc_onglet);
-        //-->
-    </script>
-
-
-
-{% endblock %}
