--- a/templates/infoseval.twig
+++ b/templates/infoseval.twig
@@ -1,47 +1,29 @@
-{% extends "base.twig" %}
+{% extends "baseinfos.twig" %}
 
 {% block title %}
-    Informations Evaluation
+    Evaluation
 {% endblock %}
 
 
-{% block container %}
-    <script type="text/javascript">
-        //<!--
-        function change_onglet(name)
-        {
-            document.getElementById('onglet_'+anc_onglet).className = 'onglet_0 onglet';
-            document.getElementById('onglet_'+name).className = 'onglet_1 onglet';
-            document.getElementById('contenu_onglet_'+anc_onglet).style.display = 'none';
-            document.getElementById('contenu_onglet_'+name).style.display = 'block';
-            anc_onglet = name;
-        }
-        //-->
-    </script>
-
-    <h2> {{ evaluation.nom }}</h2>
-
-    <div class="systeme_onglets">
-
-        <div class="onglets">
-            <span class="onglet_0 onglet" id="onglet_infos1" onclick="javascript:change_onglet('infos1');">Information General</span>
-        </div>
-
-        <div class="contenu_onglets">
-
-            <div class="contenu_onglet" id="contenu_onglet_infos1">
-                <p class="card-text">Cours conçerné : {{ cours.nom }}</p>
-            </div>
-
-        </div>
-    </div>
-    <script type="text/javascript">
-        //<!--
-        var anc_onglet = 'infos1';
-        change_onglet(anc_onglet);
-        //-->
-    </script>
 
 
+  {% block nom %}
+      <h2> {{ evaluation.nom }}</h2>
+  {% endblock %}
+
+        {% block titreOnglet1 %}
+            Cours conçerné
+        {% endblock %}
+
+            {% block dataOnglet1 %}
+
+                <p class="card-text">{{ cours.nom }}</p>
+
+            {% endblock %}
+
+{% block onglet2 %}
+
+{% endblock %}
+{% block onglet3 %}
 
 {% endblock %}
