--- a/templates/infosmatiere.twig
+++ b/templates/infosmatiere.twig
@@ -1,62 +1,43 @@
-{% extends "base.twig" %}
+{% extends "baseinfos.twig" %}
 
 {% block title %}
-    Informations Matiere
+    Matiere
 {% endblock %}
 
 
-{% block container %}
-    <script type="text/javascript">
-        //<!--
-        function change_onglet(name)
-        {
-            document.getElementById('onglet_'+anc_onglet).className = 'onglet_0 onglet';
-            document.getElementById('onglet_'+name).className = 'onglet_1 onglet';
-            document.getElementById('contenu_onglet_'+anc_onglet).style.display = 'none';
-            document.getElementById('contenu_onglet_'+name).style.display = 'block';
-            anc_onglet = name;
-        }
-        //-->
-    </script>
 
-    <h2> {{ matiere.nom }}  </h2>
 
-    <div class="systeme_onglets">
-        <div class="onglets">
-            <span class="onglet_0 onglet" id="onglet_infos1" onclick="javascript:change_onglet('infos1');">Cours associés</span>
-            <span class="onglet_0 onglet" id="onglet_infos2" onclick="javascript:change_onglet('infos2');">Professeurs</span>
-        </div>
+  {% block nom %}
+      <h2> {{ matiere.nom }}  </h2>
+  {% endblock %}
 
-        <div class="contenu_onglets">
+        {% block titreOnglet1 %}
+            Cours associés
+        {% endblock %}
 
-            <div class="contenu_onglet" id="contenu_onglet_infos1">
-
-                <ul> Cours
+            {% block dataOnglet1 %}
+                <ul>
                     {% for key in cours %}
                         <li>{{ key }}</li>
                     {% endfor %}
                 </ul>
+            {% endblock %}
 
-            </div>
 
-            <div class="contenu_onglet" id="contenu_onglet_infos2">
 
-                <ul> Professeurs
+
+        {% block titreOnglet2 %}
+            Professeurs
+        {% endblock %}
+
+            {% block dataOnglet2 %}
+                <ul>
                     {% for key in profs %}
                         <li>{{ key.0 }} {{ key.1 }}</li>
                     {% endfor %}
                 </ul>
+            {% endblock %}
 
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript">
-        //<!--
-        var anc_onglet = 'infos1';
-        change_onglet(anc_onglet);
-        //-->
-    </script>
+            {% block onglet3 %}
 
-
-
-{% endblock %}
+            {% endblock %}
